Always run combine files job

--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -99,6 +99,7 @@ jobs:
   merge-reports:
     name: Combine all tests reports
     needs: upgrade
+    if: ${{ always() }}
     runs-on: ubuntu-latest
 
     env:
