--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -123,7 +123,9 @@ jobs:
 
       - name: Combine reports
         shell: bash
-        run: ./.github/scripts/combine-reports.py "${{ env.report_path }}" "${{ env.report_path }}/${{ env.combined_report_name }}"
+        run: |
+          chmod 777 -R ${{ env.report_path }}
+          ./.github/scripts/combine-reports.py "${{ env.report_path }}" "${{ env.report_path }}/${{ env.combined_report_name }}"
 
       - uses: actions/upload-artifact@v2
         name: Upload combined report
