--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -136,8 +136,10 @@ jobs:
   # Third job: Upload report on GCP (Depends on merge-reports job)
   upload-report:
     name: Upload nghtly report
-    runs-on: ubuntu-latest
     needs: merge-reports
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+
     env:
       nightly_api_url: https://api-nightly.prestashop.com/hook/add
       campaign: autoupgrade
